# ocaci

./: .gitignore  .gitmodules  GOVERNANCE.md  JOINING.md  LICENSE.md  README.md  config.toml  index.html  index.xml  sitemap.xml
.github/ISSUE_TEMPLATE/: join-ocaci-iq.yml  join-ocaci.yml
.github/workflows/: pages.yml  pr-sync.yml  pr-validate-profile.yml  sync-on-main.yml
archetypes/: consultants.md
awscertifications/: index.html  index.xml
awscertifications/aws-certified-database-specialty/: index.html  index.xml
awscertifications/aws-certified-developer-associate/: index.html  index.xml
awscertifications/aws-certified-devops-engineer-professional/: index.html  index.xml
awscertifications/aws-certified-machine-learning-specialty/: index.html  index.xml
awscertifications/aws-certified-security-specialty/: index.html  index.xml
awscertifications/aws-certified-solutions-architect-associate/: index.html  index.xml
awscertifications/aws-certified-solutions-architect-professional/: index.html  index.xml
awscertifications/aws-certified-sysops-administrator-associate/: index.html  index.xml
consultants/: index.html  index.xml
consultants/farhad-jahangirov/: index.html
consultants/gianluigi-mucciolo/: index.html
consultants/michal-rutka/: index.html
content/: _index.md
content/consultants/: _index.md  farhad-jahangirov.md  gianluigi-mucciolo.md  michal-rutka.md
hire/: index.html  index.xml
join/: index.html  index.xml
layouts/: index.html
locations/: index.html  index.xml
scripts/python/: pyproject.toml  sync_iq.py
(+27 files in other folders)
