[tool.poetry]
name = "aci-sync-python"
version = "1.0.0"
description = "Python script to sync AWS IQ profiles into Hugo front-matter"
authors = ["AWS Certified Independents <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
frontmatter = "^3.0.8"

[tool.poetry.scripts]
sync-iq-python = "sync_iq:main" 
